--- a/AndroidClient/app/src/main/res/values/colors.xml
+++ b/AndroidClient/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+
+    <color name="text_on_bg">#FFEB3B</color>
+    <color name="gradientStart">#00FF88</color>
+    <color name="gradientStop">#BB00FF</color>
+
 </resources>
