--- a/AndroidClient/app/src/main/res/layout/activity_charts.xml
+++ b/AndroidClient/app/src/main/res/layout/activity_charts.xml
@@ -6,34 +6,66 @@
     android:layout_height="match_parent"
     tools:context=".activities.ChartsActivity">
 
-    <RelativeLayout
+
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="50dp"/>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cardView"
-            android:layout_below="@id/textView"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="50dp">
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/textViewNotesCharts"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="Графики настроения и погоды"/>
 
             <lecho.lib.hellocharts.view.LineChartView
-                android:id="@+id/chart"
+                android:id="@+id/weatherChart"
+                android:layout_width="wrap_content"
+                android:layout_height="300dp"
+                android:layout_below="@id/textViewNotesCharts"
+                android:layout_marginTop="50dp"/>
+
+            <lecho.lib.hellocharts.view.LineChartView
+                android:id="@+id/moodChart"
                 android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:layout_below="@id/weatherChart"
+                android:layout_marginTop="50dp"/>
+
+            <lecho.lib.hellocharts.view.LineChartView
+                android:id="@+id/weatherMoodChart"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:layout_below="@id/moodChart"
+                android:layout_marginTop="50dp"/>
+
+            <lecho.lib.hellocharts.view.LineChartView
+                android:id="@+id/weatherMoodDateChart"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:layout_below="@id/weatherMoodChart"
+                android:layout_marginTop="50dp"/>
+
+            <TextView
+                android:id="@+id/legendMood"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                />
-        </androidx.cardview.widget.CardView>
-    </RelativeLayout>
+                android:layout_marginRight="30dp"
+                android:layout_below="@id/weatherMoodDateChart"
+                android:text="Mood" />
+
+            <TextView
+                android:id="@+id/legendWeather"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/legendMood"
+                android:text="Weather" />
+        </RelativeLayout>
+    </ScrollView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
